--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.10.6",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
