--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "type": "module",
   "dependencies": {
     "@clerk/nextjs": "^6.10.6",
     "@radix-ui/react-alert-dialog": "^1.1.5",
@@ -15,11 +16,17 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.474.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.1.6",
+    "next-cloudinary": "^6.16.0",
+    "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "supabase": "^2.9.6",
     "tailwindcss": "^3.4.1"
   }
 }
